--- a/Robot_SCARA/Robot_SCARA.vcxproj.filters
+++ b/Robot_SCARA/Robot_SCARA.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="src\Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Primitive.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="INCLUDE\Aplication.h">
@@ -51,6 +54,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="INCLUDE\Shader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="INCLUDE\Primitive.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
